@@ -43,6 +43,10 @@
    - jmc@cvs.openbsd.org 2007/06/12 13:43:55
      [ssh.1]
      add -K to SYNOPSIS;
+   - dtucker@cvs.openbsd.org 2007/06/12 13:54:28
+     [scp.c]
+     Encode filename with strnvis if the name contains a newline (which can't
+     be represented in the scp protocol), from bz #891.  ok markus@
 
 20070611
  - (djm) Bugzilla #1306: silence spurious error messages from hang-on-exit
@@ -3057,4 +3061,4 @@
    OpenServer 6 and add osr5bigcrypt support so when someone migrates
    passwords between UnixWare and OpenServer they will still work. OK dtucker@
 
-$Id: ChangeLog,v 1.4698 2007/06/12 14:00:58 dtucker Exp $
+$Id: ChangeLog,v 1.4699 2007/06/12 14:02:07 dtucker Exp $
